# conformance

./: .gitignore  GEN_DATA.sh  LICENSE  README.md  conformance  genData100.sh  genVerifyAll.sh  generateDataAndRun.sh  logging.conf  logrotate.conf  pyproject.toml  requirements.txt  runDDT.sh  run_config.json  setup.sh  setup_linux.sh  setup_macos.sh
.github/workflows/: clang-tidy-post.yml  clang-tidy-review.yml  dart.yaml  e2e.yml  gcs-upload.yml  main.yml  run-nodejs.yml  run-rust.yml  run-samples.yml  rust.yml
DDT_DATA/: Small tests.txt  coll_test_shift.json  lang_name_test_file.json  lang_name_verify_file.json  num_fmt_test_file.json  num_fmt_verify_file.json
DDT_DATA/testData/: coll_verify_shift.json  coll_verify_shift_37.json  dcml_fmt_test_file.json  dcml_fmt_verify.json  display_names_verify.json  num_fmt_test_file.json  num_fmt_verify_file.json
conformance_cli/: conformance.py
exectors/nodejs/: executor.js
executors/: README.md  executors.md  test_strings.txt
executors/cpp/: Makefile  README.txt  clang-tidy-config.yml  coll.cpp  coll.cpp.new  compile_flags.txt  datetime_fmt.cpp  defs.mk  executor  langnames.cpp  likely_subtags.cpp  list_fmt.cpp  localedisplaynames.cpp  main.cpp  message_fmt2.cpp  number_fmt.cpp  numfmt.cpp  plural_rules.cpp  relativedatetime_fmt.cpp  rules.mk  segmenter.cpp  set_icu4c_binary.sh  set_icu4c_binary_linux.sh  set_icu4c_binary_macos.sh  util.cpp  util.h
executors/dart/: .gitignore  analysis_options.yaml  pubspec.yaml
executors/dart_native/: .gitignore  analysis_options.yaml  pubspec.yaml
executors/dart_web/: .gitignore  analysis_options.yaml  executor.js  pubspec.yaml
executors/node/: collator.js  collator_nonignorable.js  datetime_fmt.js  executor.js  langnames.js  likely_subtags.js  list_fmt.js  localedisplaynames.js  numberformat.js  plural_rules.js  relativedatetime_fmt.js  segmenter.js
executors/nodejs/: displaynames.js  numberformat.js
executors/python/: executor.py
executors/rust/: Cargo.toml
executors/rust/1.3/: Cargo.toml  build.rs
executors/rust/1.3/src/: collator.rs  datetimefmt.rs  decimalfmt.rs  displaynames.rs  langnames.rs  likelysubtags.rs  listfmt.rs  localenames.rs  main.rs  numberfmt.rs  pluralrules.rs  relativedatetime_fmt.rs
executors/rust/1.4/: Cargo.toml  build.rs
executors/rust/1.5/: Cargo.toml  build.rs
executors/rust/1.5/src/: main.rs
executors/rust/2.0/: Cargo.toml
executors/rust/2.0-beta1/: Cargo.toml  build.rs
executors/rust/2.0-beta1/src/: collator.rs  datetimefmt.rs  decimalfmt.rs  displaynames.rs  likelysubtags.rs  listfmt.rs  localenames.rs  main.rs  numberfmt.rs  pluralrules.rs  relativedatetime_fmt.rs
executors/rust/2.0-beta2/: Cargo.toml  build.rs
executors/rust/2.1/: Cargo.toml
executors/rust/2.2/: Cargo.toml
executors/rust/common/: print_icu4x_version.rs  print_icu4x_versions_1_3.rs  print_icu4x_versions_1_5.rs  print_modern_locales.rs  run_all_tests.rs  try_or_return_error.rs
executors/rust/src/: collator.rs  compat.rs  datetime_1.rs  datetime_2_beta1.rs  datetime_2_beta2.rs  datetimefmt.rs  decimalfmt.rs  displaynames.rs  langnames.rs  likelysubtags.rs  listfmt.rs  localenames.rs  main.rs  mod.rs  new_main.rs  numberfmt.rs  pluralrules.rs  relativedatetime_fmt.rs  segmenter.rs  try_or_return_error.rs
known_issues/: known_issue_data.csv
schema/: README.md  check_generated_data.py  check_schemas.py  check_test_output.py  collation_short_test_schema.json  collation_short_verify_schema.json  language_names_test_schema.json  likely_subtags_test_schema.json  likely_subtags_verify_schema.json  number_format_test_schema.json  number_format_verify_schema.json  schema.py  schema_files.py  schema_validation_summary.json  schema_validator.py
schema/collation/: result_schema.json  test_schema.json  verify_schema.json
schema/collation_short/: result_schema.json  test_schema.json  verify_schema.json
schema/datetime_fmt/: result_schema.json  test_schema.json  verify_schema.json
schema/lang_names/: result_schema.json  test_schema.json  verify_schema.json
schema/language_names/: result_schema.json  test_schema.json
schema/likely_subtags/: result_schema.json  test_schema.json  verify_schema.json
schema/list_fmt/: result_schema.json  test_schema.json  verify_schema.json
schema/message_fmt2/: README.md  result_schema.json  test_schema.json  testgen_schema.json  verify_schema.json
schema/messageformat2/: test_schema.json
schema/number_format/: result_schema.json  test_schema.json  verify_schema.json
schema/plural_rules/: result_schema.json  test_schema.json  verify_schema.json
schema/rdt_fmt/: result_schema.json  test_schema.json  verify_schema.json
schema/segmenter/: result_schema.json  test_schema.json  verify_schema.json
testdriver/: README.md  config.py  datasets.py  ddtargs.py  runAll_node_local.sh  runAll_rust_local.sh  runCollNum_ALL.sh  runColl_ALL.sh  runColl_node.sh  runColl_node_local.sh  runColl_python.sh  runColl_rust.sh  runLangNames_node.sh  runNum_node.sh  runNum_python.sh  runNum_rust.sh  testdriver.py  testplan.py
testgen/: CollationTest_NON_IGNORABLE_SHORT.txt  CollationTest_SHIFTED_SHORT.txt  README.md  README.txt  common.py  config.py  dcfmtest.txt  numberpermutationtest.txt  package-lock.json  package.json  test_type.py  testdata_gen.py
testgen/generators/: base.py  collation.py  collation_short.py  common.js  datetime_fmt.py  datetime_gen.js  generate_test_hash.js  lang_names.py  likely_subtags.py  list_fmt.py  list_fmt_gen.js  localeDisplayNames.py  message_fmt2.py  number_fmt.py  plural_rules_gen.js  plurals.py  rdt_fmt_gen.js  relativedatetime_fmt.py  segmenter.py  segmenter_gen.js
testgen/icu68/: numberpermutationtest.txt
testgen/icu69/: numberpermutationtest.txt
testgen/icu72/: languageScriptTable.txt  (+2 more)
verifier/: README.md  check_known_issues.py  compare_template.html  compare_template.py  detail_template.html  report_template.py  summary_template.html  testreport.py  verifier.py  verifyAll.sh  verifyAllTemp.sh  verifyNodeJS.sh  verifyNode_local.sh  verifyRust.sh  verifyRust_local.sh  verify_plan.py
(+208 files in other folders)
