[package]
name = "executor"

version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9.1"

json = "0.12.4"
serde = "1.0.171"
serde_json = "1.0.100"
rustc_version_runtime = "0.1.*"

icu = "1.3.0"
icu_compactdecimal = "0.2.0"
icu_displaynames = "0.11.1"
icu_datagen = { version = "1.3.0", default-features = false }

fixed_decimal ="0.5.3"
writeable ="0.5.2"
