[package]
name = "executor"

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.1"    

substring = "1.0"
json = "0.12.4"
serde = {version = "1.0.171", features = ["derive", "alloc"]}
serde_json = "1.0.100"
rustc_version_runtime = "0.1.*"
    
fixed_decimal = {version="0.5.3"}
writeable = {version="0.5.2"}
    
icu = {version="~1.3", features = ["serde", "icu_compactdecimal", "icu_displaynames"] }
icu_testdata = {version="~1.3", features = ["icu_compactdecimal", "icu_displaynames"]}
icu_provider = {version="~1.3", features=["macros"]}
icu_datagen = { version = "~1.3", default-features = false }

databake = { version = "0.1.3", features = ["derive"], optional = true}
zerovec = { version = "0.10.0", features = ["yoke"] }

[build-dependencies]
cargo_metadata="0.18"
    
[features]
