[package]
name = "executor"
publish = false
version = "0.0.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9.1"

json = "0.12.4"
serde = "1.0.171"
serde_json = "1.0.100"
rustc_version_runtime = "0.1.*"

icu = { version = "~1.4", features = ["serde", "icu_compactdecimal", "icu_displaynames"] }

fixed_decimal = "0.5.3"
writeable = "0.5.2"

[build-dependencies]
cargo_metadata = "0.18"
icu_datagen = { version = "~1.4", default-features = false }
    