[package]
name = "executor"
publish = false
version = "0.0.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9.1"

icu_provider = "~1.4"

json = "0.12.4"
serde = "1.0.171"
serde_json = "1.0.100"
rustc_version_runtime = "0.1.*"

icu = { version = "~1.4", features = ["serde", "icu_compactdecimal", "icu_displaynames", "compiled_data", "icu_relativetime", "icu_datetime_experimental"] }

fixed_decimal = "=0.5.5"
writeable = "0.5.2"

ixdtf = "0.2.0"
tinystr = "0.7.6"
    
[build-dependencies]
cargo_metadata = "0.18"
icu_datagen = { version = "~1.4", default-features = false }
    