[package]
name = "executor"
publish = false
version = "0.0.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9.1"

icu_provider = { version = "2.0.0", path = "/usr/local/google/home/sffc/projects/icu4x/provider/core" }

json = "0.12.4"
serde = "1.0.171"
serde_json = "1.0.100"
rustc_version_runtime = "0.1.*"

icu = { version = "2.0.0", path = "/usr/local/google/home/sffc/projects/icu4x/components/icu", features = ["serde", "compiled_data", "experimental"] }

fixed_decimal = { version = "0.7.0", path = "/usr/local/google/home/sffc/projects/icu4x/utils/fixed_decimal" }
writeable = { version = "0.6.0", path = "/usr/local/google/home/sffc/projects/icu4x/utils/writeable" }

ixdtf = "0.4.0"
tinystr = "0.8.0"

[build-dependencies]
cargo_metadata = "0.18"
icu_provider_source = { version = "2.0.0", default-features = false }
serde_json = "1"
