[package]
name = "executor"
publish = false
version = "0.0.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9.1"

icu_provider = { version = "2.1.0" }

json = "0.12.4"
serde = "1.0.171"
serde_json = "1.0.100"
rustc_version_runtime = "0.1.*"

icu = { version = "2.1.0", features = ["serde", "compiled_data", "experimental"] }

fixed_decimal = { version = "0.7.0" }
writeable = { version = "0.6.0" }

ixdtf = "0.6.0"
tinystr = "0.8.0"

[build-dependencies]
cargo_metadata = "0.18"
icu_provider_source = { version = "2.1.0", default-features = false }
serde_json = "1"
